# cardsboard

./: README.md  pyproject.toml  setup.py
cardsboard/: __main__.py  cardsboard.py  config.py  fsdb.py
docs/: cardsboard.cast
