[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardsboard"
version = "0.1"
authors = [
  { name="Markus Kreft", email="mail@mkreft.de" },
]
description = "Terminal Kanban board"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/markus-kreft/cardsboard"
"Bug Tracker" = "https://github.com/markus-kreft/cardsboard/issues"
